# HyperShell

./: .gitignore  CMakeLists.txt  README.md  install.sh
include/: hypershell.hpp  ssh.hpp  task.hpp  terminal.hpp
include/utils/: command_line_options.hpp
src/: hypershell.cpp  main.cpp  ssh.cpp
src/utils/: command_line_options.cpp
tests/: CMakeLists.txt  test_ssh.cpp
